--- a/pipex_bonus/Makefile
+++ b/pipex_bonus/Makefile
@@ -6,14 +6,14 @@
 #    By: mbertin <mbertin@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/03/31 13:53:50 by mbertin           #+#    #+#              #
-#    Updated: 2022/11/07 12:26:58 by mbertin          ###   ########.fr        #
+#    Updated: 2022/11/07 13:47:18 by mbertin          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME		=	pipex
 LIBFT_PATH	=	libft
 LIBFT		=	libft/libft.a
-ARG			=	file_in "cat" "grep o" "wc" file_out
+ARG			=	here_doc FIN "cat" "grep e" "wc -l" file_out
 
 CC		=	gcc
 CFLAGS		=	-g -Wall -Werror -Wextra
@@ -26,6 +26,7 @@ SRCS		=	pipex.c					\
 				check_and_redirect.c	\
 				security.c				\
 				check_fd.c				\
+				get_next_line.c			\
 
 OBJS		= 	${SRCS:.c=.o}
 
@@ -61,7 +62,7 @@ fclean: 		clean
 				@echo "Executable(s) and archive(s) successfully deleted."
 
 exe:			$(NAME)
-				valgrind --leak-check=full --show-leak-kinds=all --track-fds=yes ./pipex $(ARG)
+				valgrind --leak-check=full --show-leak-kinds=all --show-reachable=yes --track-fds=yes ./pipex $(ARG)
 
 # Removes objects and executable then remakes all
 re: 			fclean all
